# 2048_animated

./: 2048.cpp  2048.h  CMakeLists.txt
GUI/Button/: Button.cpp  Button.h
